--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -33,7 +33,7 @@ community, too numerous to mention here.
 
 This project has been supported by the European Union, initially
 through the ``XENNI'' network and ``Cool Neutrons'' RTD program, later
-through the ``SCANS'' network.
+through the ``SCANS'' network, and today the ``MCNSI`` network package.
 
 In case of any errors, questions, or suggestions, %or other need for support should arise,
 %do not hesitate to 
